--- a/style.css
+++ b/style.css
@@ -58,8 +58,16 @@ footer {
     margin: 5px;
 }
 
+.bubble.item {
+    background-color: rgb(69, 119, 75);
+}
+
 .bubble:hover {
     background-color: rgb(113, 132, 181);
+}
+
+.bubble.item:hover {
+    background-color: rgb(95, 145, 101);
 }
 
 .bubble-link {
