--- a/style.css
+++ b/style.css
@@ -31,6 +31,18 @@ footer {
     top: 80px;
 }
 
+.anchor-top-right {
+    position: absolute;
+    right: 10px;
+    top: 80px;
+}
+
+.anchor-bottom-right {
+    position: absolute;
+    right: 10px;
+    bottom: 1vh;
+}
+
 .bubbles {
     display: flex;
     flex-wrap: wrap;
@@ -82,6 +94,18 @@ footer {
     align-items: center;
     text-decoration: none;
     color: white;
+}
+
+#shopping-list-table tbody {
+    color: black;
+}
+
+#shopping-list-table th {
+    padding: 12px;
+}
+
+#shopping-list-table td {
+    padding: 12px;
 }
 
 @media (max-width: 350px)
