--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ footer {
     background-color: rgb(95, 145, 101);
 }
 
-.bubble-link {
+a.bubble-link {
     width: 100%;
     height: 100%;
     border-radius: 50%;
@@ -94,6 +94,23 @@ footer {
     align-items: center;
     text-decoration: none;
     color: white;
+}
+
+button.bubble-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: white;
+    padding: 0;
+    border: none;
+    background: none;
 }
 
 #shopping-list-table tbody {
