--- a/public/login.css
+++ b/public/login.css
@@ -23,3 +23,10 @@ div {
     padding-bottom: 0.25rem;
     border-radius: 1rem;
 }
+
+@media (max-width: 1000px)
+{
+    #playerName {
+        font-size: 1rem;
+    }
+}
